@@ -551,14 +551,12 @@ AncientRemoveEmptyStaffContext = \context {
   graceSettings = #`(
     (Voice Stem direction 1)
     (Voice Stem font-size -3)
-    (Voice NoteHead  font-size -3)
+    (Voice NoteHead font-size -3)
     (Voice Dots font-size -3)
     (Voice Stem length-fraction 0.8)
     (Voice Stem no-stem-extend #t)
     (Voice Beam thickness 0.384)
-    (Voice Beam space-function ,(lambda (beam mult)
-				 (* 0.8 (Beam::space_function
-					 beam mult))))
+    (Voice Beam length-fraction 0.8)
     (Voice Accidental font-size -4)
     (Voice Slur direction -1)
   )
