@@ -1,5 +1,15 @@
 2005-10-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/beam.cc: use length-fraction too.
+
+	* scm/define-grob-properties.scm (all-user-grob-properties):
+	remove property flag-width-function
+	(all-user-grob-properties): remove space-function.
+
+	* scm/layout-beam.scm: remove flag-width-function.
+
+	* lily/beam.cc: remove flag-width-function
+
 	* scm/layout-beam.scm: remove beam dir functions.
 
 	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): use length-fraction.
